(feat): Update Profile

--- a/frontEndCaptini/src/assets/i18n/en.json
+++ b/frontEndCaptini/src/assets/i18n/en.json
@@ -39,8 +39,9 @@
         "welcome": "Welcome back",
         "confirm": "Confirm password",
         "nativeLanguage": "Native language",
-        "gender": "gender",
+        "gender": "Gender",
         "year": "Year of birth",
+        "birthday": "Birthday",
         "langLevel": "Language level",
         "beginner": "Beginner",
         "intermediate": "Intermediate",
