connect user updated photo to profile page and leaderboard

--- a/frontEndCaptini/src/assets/i18n/en.json
+++ b/frontEndCaptini/src/assets/i18n/en.json
@@ -39,7 +39,7 @@
         "hello": "Hello there,",
         "welcome": "Welcome back",
         "confirm": "Confirm password",
-        "nativeLanguage": "Native language",
+        "nativeLanguage": "First language",
         "gender": "Gender",
         "year": "Year of birth",
         "birthday": "Birthday",
