--- a/frontEndCaptini/src/assets/i18n/icl.json
+++ b/frontEndCaptini/src/assets/i18n/icl.json
@@ -39,9 +39,9 @@
         "hello": "Halló,",
         "welcome": "Velkomin/n/ð aftur",
         "confirm": "Staðfesta lykilorð",
-        "nativeLanguage": "Móðurmál",
+        "nativeLanguage": "Þitt fyrsta mál",
         "gender": "Kyn",
-        "year": "Fæðingarár",
+        "year": "Fæðingaár",
         "birthday": "Fæðingardagur",
         "langLevel": "Tungumálastig",
         "beginner": "Byrjandi",
