add nav arrows on the bottom of the page

--- a/frontEndCaptini/src/assets/i18n/en.json
+++ b/frontEndCaptini/src/assets/i18n/en.json
@@ -139,6 +139,10 @@
         "backToSignin": "Here mistakenly? ",
         "backToSigninMsg": "Go back to the sign in page",
         "resetMsg": "Reset your password"
+    },
+    "direction": {
+        "previous": "Previous",
+        "next": "Next"
     }
 
 
