--- a/frontEndCaptini/src/assets/i18n/icl.json
+++ b/frontEndCaptini/src/assets/i18n/icl.json
@@ -139,5 +139,9 @@
             "backToSignin": "Átt þú ekki að vera hér? ",
             "backToSigninMsg": "Fara til baka á innskráningarsíðu",
             "resetMsg": "Endurstilla lykilorð"
-        }
+        },
+        "direction": {
+          "previous": "Fyrri",
+          "next": "Næsti"
+      }
 }
