--- a/frontEndCaptini/src/assets/i18n/en.json
+++ b/frontEndCaptini/src/assets/i18n/en.json
@@ -141,8 +141,8 @@
         "resetMsg": "Reset your password"
     },
     "direction": {
-        "previous": "Previous",
-        "next": "Next"
+        "previous": "Previous lesson",
+        "next": "Next lesson"
     }
 
 
