--- a/frontEndCaptini/src/assets/i18n/icl.json
+++ b/frontEndCaptini/src/assets/i18n/icl.json
@@ -141,7 +141,7 @@
             "resetMsg": "Endurstilla lykilorð"
         },
         "direction": {
-          "previous": "Fyrri",
-          "next": "Næsti"
+          "previous": "Fyrri þráður",
+          "next": "Næsti þráður"
       }
 }
