prevent multiple feedback text

--- a/frontEndCaptini/src/assets/i18n/en.json
+++ b/frontEndCaptini/src/assets/i18n/en.json
@@ -105,7 +105,7 @@
       "stop": "Stop",
       "listen": "Listen",
       "check": "Check",
-      "share": "Share"
+      "share": "Share recording"
   },
     "language": {
         "en": "English",
