--- a/frontEndCaptini/src/assets/i18n/icl.json
+++ b/frontEndCaptini/src/assets/i18n/icl.json
@@ -105,7 +105,7 @@
       "stop": "Stoppa",
       "listen": "Hlusta",
       "check": "Meta",
-      "share":"Deila"
+      "share":"Deila upptöku"
   },
     "language": {
         "en": "Enska",
