add and fix translation

--- a/frontEndCaptini/src/assets/i18n/en.json
+++ b/frontEndCaptini/src/assets/i18n/en.json
@@ -138,7 +138,9 @@
     "resetPassword": {
         "backToSignin": "Here mistakenly? ",
         "backToSigninMsg": "Go back to the sign in page",
-        "resetMsg": "Reset your password"
+        "resetMsg": "Reset your password",
+        "passwordChanged": "Your password has been updated",
+        "passwordIncorrect":"Unable to change password. Please provide the correct password to change."
     },
     "direction": {
         "previous": "Previous lesson",
