--- a/frontEndCaptini/src/assets/i18n/en.json
+++ b/frontEndCaptini/src/assets/i18n/en.json
@@ -121,7 +121,8 @@
     },
     "menu": {
         "updateProfile": "Update Profile",
-        "delete": "Delete"
+        "delete": "Delete",
+        "deactivate": "Deactivate Account"
     },
     "topic": {
         "topics": "Topics",
@@ -149,6 +150,26 @@
         "resetMsgSuccess3": "If it doesn't arrive soon, check your spam folder or ",
         "resetMsgSuccess4": "send the email again"
 
+    },
+    "activateAccount": {
+        "activateAccount": "Activate account",
+        "loginActivateAccount": "Account deactivated? ",
+        "successEmail": "We have sent an activation link to your email.If it doesn't arrive soon, check your spam folder or send the email again.If it doesn't arrive soon, check your spam folder or send the email again",
+        "emailNotFound": "There is no account associated with this email address!",
+        "activateAccountButton": "Send reactivation link",
+        "activationMessage1": "Welcome Back! Reactivate your account",
+        "activationLinkExpired":"Activation link has expired"
+    },
+    "deactivateAccount": {
+        "deactivateAccount": "Deactivate account",
+        "deactivationMessage1": "Your CAPTinI account has been temporarily deactivated.",
+        "deactivationMessage2": "We are really sorry to see you go, but thanks for giving us a try.",
+        "deactivationMessage3": "Made a mistake? Having second thoughts?",
+        "activateAccountButton1": "If you believe that this cancellation is an error, or you have any other questions, please contact support. You can also try to ",
+        "activateAccountButton2": "activate your account ",
+        "activateAccountButton3":  "and follow the required steps to reactivate your account.",
+        "activationMessage1": "Welcome Back! Reactivate your account",
+        "activationLinkExpired":"Activation link has expired"
     },
     "community": {
       "menu-give-feedback":"Give feedback to the community",
