--- a/frontEndCaptini/src/assets/i18n/icl.json
+++ b/frontEndCaptini/src/assets/i18n/icl.json
@@ -67,8 +67,8 @@
     },
     "validation": {
         "required": "Þessi reitur má ekki vera tómur",
-        "email": "Þú verður að slá inn gilt netfang",
-        "patternPasword": "lykilorðið verður að vera eins og þetta dæmi: Azs8}54*",
+        "email": "Please use a combination of digits, lower case letter, upper case letters and special characters.",
+        "patternPasword": "Vinsamlegast notið samsetningu af tölum, lágstöfum, hástöfum og sérstökum táknum.",
         "confirmPassword": "lykilorðið passar ekki, vinsamlega reyndu aftur"
     },
     "form": {
