BugFix: Fix front-end issues:

--- a/frontEndCaptini/src/assets/i18n/en.json
+++ b/frontEndCaptini/src/assets/i18n/en.json
@@ -78,7 +78,7 @@
       "change": "Change profile photo",
       "upload": "Upload new profile photo",
       "select": "Select image",
-      "warning": "Your profile photo should be either a .jpg, .jpeg, or .png file under 1.5 MB.",
+      "warning": "Your profile photo should be either a .jpg, .jpeg, or .png file.",
       "save": "Save changes",
       "cancel": "Cancel"
     },
