--- a/frontEndCaptini/src/assets/i18n/icl.json
+++ b/frontEndCaptini/src/assets/i18n/icl.json
@@ -78,7 +78,7 @@
         "change": "Skipta um prófílmynd",
         "upload": "Hlaða upp mynd",
         "select": "Veldu mynd",
-        "warning": "Prófílmyndin má að hámarki vera 1.5 MB að stærð og þarf að hlaða henni upp á .jpg, .jpeg eða .png sniði.",
+        "warning": "Prófílmyndin þarf að vera annaðhvort .jpg, .jpeg eða .png skrá..",
         "save": "Vista breytingar",
         "cancel": "Hætta við"
     },
